SERVER-56956 ScopedShardVersionCriticalSection can leave critical section held if filtering metadata refresh fails